--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "@testing-library/user-event": "^13.5.0",
     "animate.css": "^4.1.1",
     "gh-pages": "^4.0.0",
+    "i": "^0.3.7",
+    "npm": "^8.16.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-scripts": "^5.0.1",
     "react-scroll": "^1.8.7",
+    "react-scroll-into-view": "^1.12.0",
     "scroll-into-view": "^1.16.2",
     "web-vitals": "^2.1.4"
   },
